# labonair

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MANUAL_TEST_PLAN.md  README.md  SECURITY.md  biome.json  command-pallete.md  context.md  handshake.md  hosts_manager_context.md  index.html  knip.json  macos_tcp_socket2_context.md  new-themes-prompt.md  next-task.md  package.json  plan-overview.md  pnpm-lock.yaml  pnpm-workspace.yaml  prd.md  release-log.md  review-fix-plan.md  schema.json  settings.html  settings_theme_context.md  sftp_ui_context.md  temp.md  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  (+3 more)
src-tauri/: Cargo.toml  Info.plist  Labonair.entitlements  Nexum.entitlements  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: claude_auth.rs  dock_menu.rs  errors.rs  mod.rs  secrets.rs  themes.rs
src-tauri/src/modules/backgrounds/: mod.rs
src-tauri/src/modules/credentials/: mod.rs
src-tauri/src/modules/fs/: file.rs  grep.rs  mod.rs  mutate.rs  paths.rs  search.rs  tree.rs  watcher.rs
src-tauri/src/modules/git/: executor.rs  mod.rs
src-tauri/src/modules/hosts/: db.rs  mod.rs
src-tauri/src/modules/mcp/: mod.rs  osc133.rs  server.rs
src-tauri/src/modules/pty/: block_meta.rs  history.rs  mod.rs  session.rs  shell_init.rs
src-tauri/src/modules/scrollback/: mod.rs
src-tauri/src/modules/settings/: mod.rs
src-tauri/src/modules/sftp/: commands.rs  connection.rs  mod.rs  net_error.rs  state.rs  worker.rs
src-tauri/src/modules/shell/: background.rs  mod.rs  session.rs
src-tauri/src/modules/snippets/: db.rs  exec.rs  mod.rs
src-tauri/src/modules/ssh/: client.rs  config_parser.rs  exec.rs  mod.rs  pty.rs  sftp.rs  shell.rs  shell_integration.rs  tunnels.rs
src-tauri/src/modules/themes/: default-dark.json  default.json  mod.rs
(+637 files in other folders)
